# ui-bridge-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ui_bridge_mcp/: __init__.py  client.py  server.py
tests/: test_agent_mode.py
